--- a/bricksy/index.html
+++ b/bricksy/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+  integrity="sha512-TzJ7hEECXb4V4Oiyhx6QkQBxJhF7msbN5R5dZ9z3iFJKkVvcLzvTcmn0YVw3V8tkBPcsn5z+8ndh2H9x5mYPOw=="
+  crossorigin="anonymous"
+  referrerpolicy="no-referrer"
+/>
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
